Update documentation and examples: remove outdated references, enhance example descriptions, and add new notebook for vulnerability index demonstration

--- a/notebooks/examples/clustering_example.ipynb
+++ b/notebooks/examples/clustering_example.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VERUS Clustering with OPTICS"
+    "# VERUS Clustering\n",
+    "\n",
+    "This example demonstrate the clustering process within VERUS following the steps below:\n",
+    "\n",
+    "1. Load the data\n",
+    "2. Extract initial centers using OPTICS\n",
+    "3. Cluster the data with KMeans using the VI as weights\n",
+    "4. Visualize the clusters"
    ]
   },
   {
@@ -21,8 +28,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Load Data"
+    "## 1. Load Data\n",
+    "\n",
+    "For this example, the data is loaded from a dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
